--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.10",
     "request": "^2.81.0"
   }
